[package]
name    = "kprobe"
version = "0.0.0"
authors = ["Will <will@kentik.com>"]
edition = "2018"
build   = "build.rs"

license     = "PROPRIETARY"
description = """

Kentik host agent - please see https://kb.kentik.com/Bd03.htm for detailed
documentation of flags, options, and recommended configuration.
"""

[dependencies]
byteorder    = "1.4.3"
clap         = "2.34.0"
env_logger   = "0.6.1"
errno        = "0.3.2"
http-muncher = "0.3.2"
libc         = "0.2.147"
log          = "0.4.20"
nom          = "3.2.1"
pnet         = "0.22.0"
pnet_macros  = "0.22.0"
pcap         = "0.7.0"
rand         = "0.8.5"
ring         = "0.17.7"
time         = "0.1.42"
url          = "2.4.0"

[dependencies.kentik-api]
git = "ssh://git@github.com/kentik/kentik-api-rust"
rev = "66c2079747498fed9f8cead29061085857c9fae3"

[target.'cfg(not(target_arch = "arm"))'.dependencies]
jemallocator = "0.5.4"

[build-dependencies]
anyhow       = "1.0.75"
platforms    = "3.0.2"

[build-dependencies.git2]
version  = "0.17.2"
features = []
default-features = false

[profile.release]
lto   = true
debug = true
