[package]
name    = "kprobe"
version = "0.0.0"
authors = ["Will <will@kentik.com>"]
edition = "2018"
build   = "build.rs"

license     = "PROPRIETARY"
description = """

Kentik host agent - please see https://kb.kentik.com/Bd03.htm for detailed
documentation of flags, options, and recommended configuration.
"""

[dependencies]
byteorder    = "1.5.0"
clap         = "=2.34.0"
env_logger   = "0.11.2"
errno        = "0.3.8"
http-muncher = "0.3.2"
libc         = "0.2.153"
log          = "0.4.20"
nom          = "=3.2.1"
pnet         = "0.34.0"
pnet_macros  = "0.34.0"
pcap         = "1.2.0"
rand         = "0.8.5"
ring         = "0.17.7"
time         = "0.3.34"
url          = "2.5.0"

[dependencies.kentik-api]
git = "ssh://git@github.com/kentik/kentik-api-rust"
rev = "0a053437f1aae7ba69c287654bfbd28da1b463cb"

[target.'cfg(not(target_arch = "arm"))'.dependencies]
jemallocator = "0.5.4"

[build-dependencies]
anyhow       = "1.0.79"
platforms    = "3.3.0"

[build-dependencies.git2]
version  = "0.18.2"
features = []
default-features = false

[profile.release]
lto   = true
debug = true
