[package]
name    = "kprobe"
version = "0.0.0"
authors = ["Will <will@kentik.com>"]
edition = "2018"
build   = "build.rs"

license     = "PROPRIETARY"
description = """

Kentik host agent - please see https://kb.kentik.com/Bd03.htm for detailed
documentation of flags, options, and recommended configuration.
"""

[dependencies]
anyhow       = "1.0.86"
bpaf         = "0.9.12"
byteorder    = "1.5.0"
env_logger   = "0.11.3"
errno        = "0.3.9"
http-muncher = "0.3.2"
libc         = "0.2.155"
log          = "0.4.22"
nom          = "=3.2.1"
pnet         = "0.34.0"
pnet_macros  = "0.34.0"
pcap         = "1.2.0"
rand         = "0.8.5"
ring         = "0.17.8"
time         = "0.3.36"
url          = "2.5.2"

[dependencies.kentik-api]
git = "ssh://git@github.com/kentik/kentik-api-rust"
rev = "2012f38b3eb2664e553da2f56caf114d1288c9f9"

[target.'cfg(not(target_arch = "arm"))'.dependencies]
jemallocator = "0.5.4"

[build-dependencies]
anyhow       = "1.0.86"
platforms    = "3.3.0"

[build-dependencies.git2]
version  = "0.18.2"
features = []
default-features = false

[profile.release]
lto   = true
debug = true
